修改jdbc配置文件的url属性名称，和pom文件里重复；修改Springmvc配置文件;增加两个Area接口

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 driver=com.mysql.jdbc.Driver
 # ?useUnicode=true&characterEncoding=utf-8 解决到mysql的编码问题
-url=jdbc:mysql://192.168.0.102:3306/zhongkaobao?useUnicode=true&characterEncoding=utf-8
+jdbcUrl=jdbc:mysql://192.168.0.102:3306/zhongkaobao?useUnicode=true&characterEncoding=utf-8
 username=root
 password=root
 #定义初始连接数  
