--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 driver=com.mysql.jdbc.Driver
 # ?useUnicode=true&characterEncoding=utf-8 解决到mysql的编码问题
-jdbcUrl=jdbc:mysql://192.168.0.102:3306/zhongkaobao?useUnicode=true&characterEncoding=utf-8
+jdbcUrl=jdbc:mysql://127.0.0.1:3306/zhongkaobao?useUnicode=true&characterEncoding=utf-8
 username=root
-password=root
+password=
 #定义初始连接数  
 initialSize=0
 #定义最大连接数  
